<resources>
    <string name="app_name">Upgrade</string>
    <string name="scan_device">Scan</string>
    <string name="match_device">Pairing</string>


    <string name="upgrade">Upgrade</string>
    <string name="refresh">Scan</string>
    <string name="name">Name</string>
    <string name="rssi">RSSI</string>
    <string name="version">Version</string>
    <string name="status">Status</string>
    <string name="select_file">Select file</string>
    <string name="timeout">Timeout</string>
    <string name="connect">connect</string>
    <string name="connecting">updating</string>
    <string name="connected">connected</string>
    <string name="crc_verify">CRC Verify</string>
    <string name="upgrade_success">the upgrade is successful</string>
    <string name="upgrade_timeout">the upgrade is timeout</string>
    <string name="upgrade_crc_error">the crc is error</string>
    <string name="upgrade_file_error">the upgrade file is erro</string>
    <string name="upgrade_unknow_error">unknow error</string>
    <string name="updating">updating...</string>
    <string name="crc_success_upgrade">the crc is success,start upgrade</string>
    <string name="connection_failed">the connection is failed</string>
    <string name="connection_successed">the connection is successful</string>
    <string name="crc_verify_start">crc verity</string>
    <string name="crc_verify_error">crc error</string>
    <string name="upgrade_error">upgrade error</string>
    <string name="start_send_package">start send package</string>
    <string name="select_file_first">select file first!</string>
    <string name="install_file_manager_app">install file manager app</string>
    <string name="select_upgrade_file_first">select upgrade file first</string>
</resources>
